style.scss
/* ... */
.art-footer h4 {
    color: #4383A3;
    font-family: Arial, 'Arial Unicode MS', Helvetica, Sans-Serif;
}

.art-footer h5 {
    color: #4383A3;
    font-family: Arial, 'Arial Unicode MS', Helvetica, Sans-Serif;
}

.art-footer h6 {
    color: #4383A3;
    font-family: Arial, 'Arial Unicode MS', Helvetica, Sans-Serif;
}

.art-footer img {
    border: none;
    margin: 0;
}

.art-rss-tag-icon {
    background: url('images/footerrssicon.png') no-repeat scroll;
    margin: 0 auto;
    min-height: 32px;
    min-width: 32px;
    display: inline-block;
    text-indent: 35px;
    background-position: left center;
}

.art-rss-tag-icon:empty {
    vertical-align: middle;
}

.art-facebook-tag-icon {
    background: url('images/footerfacebookicon.png') no-repeat scroll;
    margin: 0 auto;
    min-height: 32px;
    min-width: 32px;
    display: inline-block;
    text-indent: 35px;
    background-position: left center;
}

.art-facebook-tag-icon:empty {
    vertical-align: middle;
}

.art-twitter-tag-icon {
    background: url('images/footertwittericon.png') no-repeat scroll;
    margin: 0 auto;
    min-height: 32px;
    min-width: 32px;
    display: inline-block;
    text-indent: 35px;
    background-position: left center;
}

.art-twitter-tag-icon:empty {
    vertical-align: middle;
}

.art-footer ul>li:before {
    content: url('images/footerbullets.png');
    margin-right: 6px;
    bottom: 2px;
    position: relative;
    display: inline-block;
    vertical-align: middle;
    font-size: 0;
    line-height: 0;
    margin-left: -13px;
}

.opera .art-footer ul>li:before {
    /* Vertical-align:middle in Opera doesn't need additional offset */
    bottom: 0;
}

.art-footer li {
    font-size: 16px;
    font-family: Arial, 'Arial Unicode MS', Helvetica, Sans-Serif;
    color: #234657;
}

.art-footer ul>li,
.art-footer ol {
    padding: 0;
}

.art-footer ul>li {
    padding-left: 13px;
}

.art-page-footer,
.art-page-footer a,
.art-page-footer a:link,
.art-page-footer a:visited,
.art-page-footer a:hover {
    font-family: Arial;
    font-size: 10px;
    letter-spacing: normal;
    word-spacing: normal;
    font-style: normal;
    font-weight: normal;
    text-decoration: underline;
    color: #145066;
}

.art-page-footer {
    position: relative;
    z-index: auto !important;
    padding: 1em;
    text-align: center !important;
    text-decoration: none;
    color: #234657;
}

.art-lightbox-wrapper {
    background-color: rgba(0, 0, 0, .8);
    bottom: 0;
    left: 0;
    padding: 0 100px;
    position: fixed;
    right: 0;
    text-align: center;
    top: 0;
    z-index: 1000000;
}

.art-lightbox,
.art-lightbox-wrapper .art-lightbox-image {
    cursor: pointer;
}

.art-lightbox-wrapper .art-lightbox-image {
    border: 6px solid #fff;
    border-radius: 3px;
    display: none;
    max-width: 100%;
    vertical-align: middle;
}

.art-lightbox-wrapper .art-lightbox-image.active {
    display: inline-block;
}

.art-lightbox-wrapper .lightbox-error {
    background: #fff;
    border: 1px solid #b4b4b4;
    border-radius: 10px;
    box-shadow: 0 2px 5px #333;
    height: 80px;
    opacity: .95;
    padding: 20px;
    position: fixed;
    width: 300px;
    z-index: 100;
}

.art-lightbox-wrapper .loading {
    background: #fff url('images/preloader-01.gif') center center no-repeat;
    border: 1px solid #b4b4b4;
    border-radius: 10px;
    box-shadow: 0 2px 5px #333;
    height: 32px;
    opacity: .5;
    padding: 10px;
    position: fixed;
    width: 32px;
    z-index: 10100;
}

.art-lightbox-wrapper .arrow {
    cursor: pointer;
    height: 100px;
    opacity: .5;
    filter: alpha(opacity=50);
    position: fixed;
    width: 82px;
    z-index: 10003;
}

.art-lightbox-wrapper .arrow.left {
    left: 9px;
}

.art-lightbox-wrapper .arrow.right {
    right: 9px;
}

.art-lightbox-wrapper .arrow:hover {
    opacity: 1;
    filter: alpha(opacity=100);
}

.art-lightbox-wrapper .arrow.disabled {
    display: none;
}

.art-lightbox-wrapper .arrow-t,
.art-lightbox-wrapper .arrow-b {
    background-color: #fff;
    border-radius: 3px;
    height: 6px;
    left: 26px;
    position: relative;
    width: 30px;
}

.art-lightbox-wrapper .arrow-t {
    top: 38px;
}

.art-lightbox-wrapper .arrow-b {
    top: 50px;
}

.art-lightbox-wrapper .close {
    cursor: pointer;
    height: 22px;
    opacity: .5;
    filter: alpha(opacity=50);
    position: fixed;
    right: 39px;
    top: 30px;
    width: 22px;
    z-index: 10003;
}

.art-lightbox-wrapper .close:hover {
    opacity: 1;
    filter: alpha(opacity=100);
}

.art-lightbox-wrapper .close .cw,
.art-lightbox-wrapper .close .ccw {
    background-color: #fff;
    border-radius: 3px;
    height: 6px;
    position: absolute;
    left: -4px;
    top: 8px;
    width: 30px;
}

.art-lightbox-wrapper .cw {
    transform: rotate(45deg);
    -ms-transform: rotate(45deg);
    /* IE 9 */
    -webkit-transform: rotate(45deg);
    /* Safari and Chrome */
    -o-transform: rotate(45deg);
    /* Opera */
    -moz-transform: rotate(45deg);
    /* Firefox */
}

.art-lightbox-wrapper .ccw {
    transform: rotate(-45deg);
    -ms-transform: rotate(-45deg);
    /* IE 9 */
    -webkit-transform: rotate(-45deg);
    /* Safari and Chrome */
    -o-transform: rotate(-45deg);
    /* Opera */
    -moz-transform: rotate(-45deg);
    /* Firefox */
}

.art-lightbox-wrapper .close-alt,
.art-lightbox-wrapper .arrow-right-alt,
.art-lightbox-wrapper .arrow-left-alt {
    color: #fff;
    display: none;
    font-size: 2.5em;
}

.ie8 .art-lightbox-wrapper .close-alt,
.ie8 .art-lightbox-wrapper .arrow-right-alt,
.ie8 .art-lightbox-wrapper .arrow-left-alt {
    display: block;
}

.ie8 .art-lightbox-wrapper .cw,
.ie8 .art-lightbox-wrapper .ccw {
    display: none;
}

.art-content-layout .art-sidebar1 {
    margin: 0 auto;
    order: -1;
}

.art-content-layout .art-content {
    margin: 0 auto;
}

.art-content-layout .art-sidebar2 {
    margin: 0 auto;
    order: -1;
}
/* ... */

